// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color loader #ab throws an error 1`] = `
"'value' must contain a color, for instance '#B6D918', '#fff' or '#01b'.

   Line | Content
 >    1 | value: #ab
"
`;

exports[`color loader #abcd throws an error 1`] = `
"'value' must contain a color, for instance '#B6D918', '#fff' or '#01b'.

   Line | Content
 >    1 | value: #abcd
"
`;

exports[`color loader #abcde throws an error 1`] = `
"'value' must contain a color, for instance '#B6D918', '#fff' or '#01b'.

   Line | Content
 >    1 | value: #abcde
"
`;

exports[`color loader #bcdefg throws an error 1`] = `
"'value' must contain a color, for instance '#B6D918', '#fff' or '#01b'.

   Line | Content
 >    1 | value: #bcdefg
"
`;

exports[`color loader blue throws an error 1`] = `
"'value' must contain a color, for instance '#B6D918', '#fff' or '#01b'.

   Line | Content
 >    1 | value: blue
"
`;
